# hrf

./: .gitignore  CMakeLists.txt  CRForest-Detector.cpp  CRForest.cpp  CRForest.h  CRForest.hpp  CRForestDetector.cpp  CRForestDetector.h  CRForestDetector.hpp  CRPatch.cpp  CRPatch.h  CRPatch.hpp  CRTree.cpp  CRTree.h  CRTree.hpp  Candidate.cpp  Candidate.h  Candidate.hpp  GpuHoG.cpp  GpuHoG.hpp  HoG.cpp  HoG.h  LoadBalancer.cpp  LoadBalancer.h  LoadBalancer.hpp  README.md  TrainStats.h  detector.sublime-workspace  doxygen_config.cfg  myhog.cpp  myutils.h  myutils.hpp  untitled.cpp  utils.h
